qt/multimedia/gen_qradiotunercontrol.nim

import Qt5MultimediaWidgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5MultimediaWidgets")
{.compile("gen_qradiotunercontrol.cpp", cflags).}


import gen_qradiotunercontrol_types
export gen_qradiotunercontrol_types

import
  gen_qmediacontrol,
  gen_qobjectdefs,
  gen_qradiotuner
export
  gen_qmediacontrol,
  gen_qobjectdefs,
  gen_qradiotuner

type cQRadioTunerControl*{.exportc: "QRadioTunerControl", incompleteStruct.} = object

proc fcQRadioTunerControl_metaObject(self: pointer, ): pointer {.importc: "QRadioTunerControl_metaObject".}
proc fcQRadioTunerControl_metacast(self: pointer, param1: cstring): pointer {.importc: "QRadioTunerControl_metacast".}
proc fcQRadioTunerControl_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QRadioTunerControl_metacall".}
proc fcQRadioTunerControl_tr(s: cstring): struct_miqt_string {.importc: "QRadioTunerControl_tr".}
proc fcQRadioTunerControl_trUtf8(s: cstring): struct_miqt_string {.importc: "QRadioTunerControl_trUtf8".}
proc fcQRadioTunerControl_state(self: pointer, ): cint {.importc: "QRadioTunerControl_state".}
proc fcQRadioTunerControl_band(self: pointer, ): cint {.importc: "QRadioTunerControl_band".}
proc fcQRadioTunerControl_setBand(self: pointer, b: cint): void {.importc: "QRadioTunerControl_setBand".}
proc fcQRadioTunerControl_isBandSupported(self: pointer, b: cint): bool {.importc: "QRadioTunerControl_isBandSupported".}
proc fcQRadioTunerControl_frequency(self: pointer, ): cint {.importc: "QRadioTunerControl_frequency".}
proc fcQRadioTunerControl_frequencyStep(self: pointer, b: cint): cint {.importc: "QRadioTunerControl_frequencyStep".}
proc fcQRadioTunerControl_frequencyRange(self: pointer, b: cint): struct_miqt_map {.importc: "QRadioTunerControl_frequencyRange".}
proc fcQRadioTunerControl_setFrequency(self: pointer, frequency: cint): void {.importc: "QRadioTunerControl_setFrequency".}
proc fcQRadioTunerControl_isStereo(self: pointer, ): bool {.importc: "QRadioTunerControl_isStereo".}
proc fcQRadioTunerControl_stereoMode(self: pointer, ): cint {.importc: "QRadioTunerControl_stereoMode".}
proc fcQRadioTunerControl_setStereoMode(self: pointer, mode: cint): void {.importc: "QRadioTunerControl_setStereoMode".}
proc fcQRadioTunerControl_signalStrength(self: pointer, ): cint {.importc: "QRadioTunerControl_signalStrength".}
proc fcQRadioTunerControl_volume(self: pointer, ): cint {.importc: "QRadioTunerControl_volume".}
proc fcQRadioTunerControl_setVolume(self: pointer, volume: cint): void {.importc: "QRadioTunerControl_setVolume".}
proc fcQRadioTunerControl_isMuted(self: pointer, ): bool {.importc: "QRadioTunerControl_isMuted".}
proc fcQRadioTunerControl_setMuted(self: pointer, muted: bool): void {.importc: "QRadioTunerControl_setMuted".}
proc fcQRadioTunerControl_isSearching(self: pointer, ): bool {.importc: "QRadioTunerControl_isSearching".}
proc fcQRadioTunerControl_isAntennaConnected(self: pointer, ): bool {.importc: "QRadioTunerControl_isAntennaConnected".}
proc fcQRadioTunerControl_searchForward(self: pointer, ): void {.importc: "QRadioTunerControl_searchForward".}
proc fcQRadioTunerControl_searchBackward(self: pointer, ): void {.importc: "QRadioTunerControl_searchBackward".}
proc fcQRadioTunerControl_searchAllStations(self: pointer, searchMode: cint): void {.importc: "QRadioTunerControl_searchAllStations".}
proc fcQRadioTunerControl_cancelSearch(self: pointer, ): void {.importc: "QRadioTunerControl_cancelSearch".}
proc fcQRadioTunerControl_start(self: pointer, ): void {.importc: "QRadioTunerControl_start".}
proc fcQRadioTunerControl_stop(self: pointer, ): void {.importc: "QRadioTunerControl_stop".}
proc fcQRadioTunerControl_error(self: pointer, ): cint {.importc: "QRadioTunerControl_error".}
proc fcQRadioTunerControl_errorString(self: pointer, ): struct_miqt_string {.importc: "QRadioTunerControl_errorString".}
proc fcQRadioTunerControl_stateChanged(self: pointer, state: cint): void {.importc: "QRadioTunerControl_stateChanged".}
proc fQRadioTunerControl_connect_stateChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_stateChanged".}
proc fcQRadioTunerControl_bandChanged(self: pointer, band: cint): void {.importc: "QRadioTunerControl_bandChanged".}
proc fQRadioTunerControl_connect_bandChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_bandChanged".}
proc fcQRadioTunerControl_frequencyChanged(self: pointer, frequency: cint): void {.importc: "QRadioTunerControl_frequencyChanged".}
proc fQRadioTunerControl_connect_frequencyChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_frequencyChanged".}
proc fcQRadioTunerControl_stereoStatusChanged(self: pointer, stereo: bool): void {.importc: "QRadioTunerControl_stereoStatusChanged".}
proc fQRadioTunerControl_connect_stereoStatusChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_stereoStatusChanged".}
proc fcQRadioTunerControl_searchingChanged(self: pointer, searching: bool): void {.importc: "QRadioTunerControl_searchingChanged".}
proc fQRadioTunerControl_connect_searchingChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_searchingChanged".}
proc fcQRadioTunerControl_signalStrengthChanged(self: pointer, signalStrength: cint): void {.importc: "QRadioTunerControl_signalStrengthChanged".}
proc fQRadioTunerControl_connect_signalStrengthChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_signalStrengthChanged".}
proc fcQRadioTunerControl_volumeChanged(self: pointer, volume: cint): void {.importc: "QRadioTunerControl_volumeChanged".}
proc fQRadioTunerControl_connect_volumeChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_volumeChanged".}
proc fcQRadioTunerControl_mutedChanged(self: pointer, muted: bool): void {.importc: "QRadioTunerControl_mutedChanged".}
proc fQRadioTunerControl_connect_mutedChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_mutedChanged".}
proc fcQRadioTunerControl_errorWithErr(self: pointer, err: cint): void {.importc: "QRadioTunerControl_errorWithErr".}
proc fQRadioTunerControl_connect_errorWithErr(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_errorWithErr".}
proc fcQRadioTunerControl_stationFound(self: pointer, frequency: cint, stationId: struct_miqt_string): void {.importc: "QRadioTunerControl_stationFound".}
proc fQRadioTunerControl_connect_stationFound(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_stationFound".}
proc fcQRadioTunerControl_antennaConnectedChanged(self: pointer, connectionStatus: bool): void {.importc: "QRadioTunerControl_antennaConnectedChanged".}
proc fQRadioTunerControl_connect_antennaConnectedChanged(self: pointer, slot: int) {.importc: "QRadioTunerControl_connect_antennaConnectedChanged".}
proc fcQRadioTunerControl_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTunerControl_tr2".}
proc fcQRadioTunerControl_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTunerControl_tr3".}
proc fcQRadioTunerControl_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QRadioTunerControl_trUtf82".}
proc fcQRadioTunerControl_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRadioTunerControl_trUtf83".}
proc fcQRadioTunerControl_staticMetaObject(): pointer {.importc: "QRadioTunerControl_staticMetaObject".}
proc fcQRadioTunerControl_delete(self: pointer) {.importc: "QRadioTunerControl_delete".}


func init*(T: type QRadioTunerControl, h: ptr cQRadioTunerControl): QRadioTunerControl =
  T(h: h)
proc metaObject*(self: QRadioTunerControl, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQRadioTunerControl_metaObject(self.h))

proc metacast*(self: QRadioTunerControl, param1: cstring): pointer =

  fcQRadioTunerControl_metacast(self.h, param1)

proc metacall*(self: QRadioTunerControl, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQRadioTunerControl_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QRadioTunerControl, s: cstring): string =

  let v_ms = fcQRadioTunerControl_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QRadioTunerControl, s: cstring): string =

  let v_ms = fcQRadioTunerControl_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc state*(self: QRadioTunerControl, ): gen_qradiotuner.QRadioTunerState =

  gen_qradiotuner.QRadioTunerState(fcQRadioTunerControl_state(self.h))

proc band*(self: QRadioTunerControl, ): gen_qradiotuner.QRadioTunerBand =

  gen_qradiotuner.QRadioTunerBand(fcQRadioTunerControl_band(self.h))

proc setBand*(self: QRadioTunerControl, b: gen_qradiotuner.QRadioTunerBand): void =

  fcQRadioTunerControl_setBand(self.h, cint(b))

proc isBandSupported*(self: QRadioTunerControl, b: gen_qradiotuner.QRadioTunerBand): bool =

  fcQRadioTunerControl_isBandSupported(self.h, cint(b))

proc frequency*(self: QRadioTunerControl, ): cint =

  fcQRadioTunerControl_frequency(self.h)

proc frequencyStep*(self: QRadioTunerControl, b: gen_qradiotuner.QRadioTunerBand): cint =

  fcQRadioTunerControl_frequencyStep(self.h, cint(b))

proc frequencyRange*(self: QRadioTunerControl, b: gen_qradiotuner.QRadioTunerBand): tuple[first: cint, second: cint] =

  var v_mm = fcQRadioTunerControl_frequencyRange(self.h, cint(b))
  var v_First_CArray = cast[ptr UncheckedArray[cint]](v_mm.keys)
  var v_Second_CArray = cast[ptr UncheckedArray[cint]](v_mm.values)
  var v_entry_First = v_First_CArray[0]

  var v_entry_Second = v_Second_CArray[0]

  (first: v_entry_First , second: v_entry_Second )

proc setFrequency*(self: QRadioTunerControl, frequency: cint): void =

  fcQRadioTunerControl_setFrequency(self.h, frequency)

proc isStereo*(self: QRadioTunerControl, ): bool =

  fcQRadioTunerControl_isStereo(self.h)

proc stereoMode*(self: QRadioTunerControl, ): gen_qradiotuner.QRadioTunerStereoMode =

  gen_qradiotuner.QRadioTunerStereoMode(fcQRadioTunerControl_stereoMode(self.h))

proc setStereoMode*(self: QRadioTunerControl, mode: gen_qradiotuner.QRadioTunerStereoMode): void =

  fcQRadioTunerControl_setStereoMode(self.h, cint(mode))

proc signalStrength*(self: QRadioTunerControl, ): cint =

  fcQRadioTunerControl_signalStrength(self.h)

proc volume*(self: QRadioTunerControl, ): cint =

  fcQRadioTunerControl_volume(self.h)

proc setVolume*(self: QRadioTunerControl, volume: cint): void =

  fcQRadioTunerControl_setVolume(self.h, volume)

proc isMuted*(self: QRadioTunerControl, ): bool =

  fcQRadioTunerControl_isMuted(self.h)

proc setMuted*(self: QRadioTunerControl, muted: bool): void =

  fcQRadioTunerControl_setMuted(self.h, muted)

proc isSearching*(self: QRadioTunerControl, ): bool =

  fcQRadioTunerControl_isSearching(self.h)

proc isAntennaConnected*(self: QRadioTunerControl, ): bool =

  fcQRadioTunerControl_isAntennaConnected(self.h)

proc searchForward*(self: QRadioTunerControl, ): void =

  fcQRadioTunerControl_searchForward(self.h)

proc searchBackward*(self: QRadioTunerControl, ): void =

  fcQRadioTunerControl_searchBackward(self.h)
